--- a/public/css/main.css
+++ b/public/css/main.css
@@ -25,7 +25,6 @@ header {
 .navi-background, .custom-theme {
 	background: white!important;
 }
-
 .box-image-radius {
 	overflow: hidden;
 }
@@ -35,9 +34,6 @@ header {
 	border-radius: 20px;
 }
 
-
-
-
 .content {
 	background: #cbf078;
 }
@@ -46,12 +42,41 @@ header {
 	background: #ebffbd;
 }
 
+.begin { 
+	background: white;
+	overflow: hidden;
+	border-radius: 10px;
+	box-shadow: 0px 1px 15px grey;
+	background: url("../images/h4.jpg");
+}
+
+.fl-image-box {
+	padding: 100px 0;
+	background: hsl(0deg 0% 51% / 70%);
+}
+
+.maps {
+	margin: 50px 0;
+}
 footer {
+	border-top: 5px solid #ff7e67;
 	background: #627280;
 	background: radial-gradient(circle at 10% 20%, rgb(98, 114, 128) 0%, rgb(52, 63, 51) 90.1%);
 	color: white;
 	padding: 20px;
 }
+.line { height: 4px; margin: 5px 0; background: #a2c11c; width: 100px; border-radius: 10px; }
+.box-fl img {
+	margin-top: 20px;
+	border: 4px solid #627280;
+	border-radius: 20px!important;
+	text-align: left;
+	height: 100px;
+	width: 100px;
+	background: red;
+	object-fit: cover;
+}
+.box-fl img:hover { border: 4px solid #fdc57b; cursor: pointer;}
 
 .orange { color: white; }
 .orange:hover { color: orange; }
@@ -60,4 +85,3 @@ footer {
 .box-tale {
 	margin: 20px;
 }
-*/
